objects/LegacyContractReport__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Assigned_Resource__c</fullName>
        <description>CRM assigned to review</description>
        <inlineHelpText>CRM assigned to review</inlineHelpText>
        <label>CRM Assigned Resource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vishal</fullName>
                </value>
                <value>
                    <fullName>Rishi</fullName>
                </value>
                <value>
                    <fullName>Hemant</fullName>
                </value>
                <value>
                    <fullName>Lovejeet</fullName>
                </value>
                <value>
                    <fullName>Vaibhav</fullName>
                </value>
                <value>
                    <fullName>Sanjana</fullName>
                </value>
                <value>
                    <fullName>Namit</fullName>
                </value>
                <value>
                    <fullName>Dishank</fullName>
                </value>
                <value>
                    <fullName>Aparna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chainMasterRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chain Master</label>
        <referenceTo>CpqAudit__c</referenceTo>
        <relationshipLabel>Legacy Contract Reports</relationshipLabel>
        <relationshipName>legacyContractReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>contractCurrentYear__c</fullName>
        <formula>contract__r.Current_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contractFinalYear__c</fullName>
        <formula>VALUE(contract__r.Parent_Contract_Term_Years__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Final Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contractRenewalType__c</fullName>
        <formula>contract__r.Upcoming_Renewal_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Renewal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Legacy Contract Reports</relationshipLabel>
        <relationshipName>legacyRenewalReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>expectedTermRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>expectedTermRenewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>failures__c</fullName>
        <label>Number of Mismatches</label>
        <summaryFilterItems>
            <field>LegacyDataComparison__c.result__c</field>
            <operation>equals</operation>
            <value>FAILURE</value>
        </summaryFilterItems>
        <summaryForeignKey>LegacyDataComparison__c.legacyContractReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>generationFailure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generation Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>masterReport__c</fullName>
        <label>Master Report</label>
        <referenceTo>LegacyMasterReport__c</referenceTo>
        <relationshipLabel>Legacy Contract Reports</relationshipLabel>
        <relationshipName>legacyContractReports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>needsFinanceReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Finance Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>passPercentage__c</fullName>
        <formula>(successes__c) / (failures__c + successes__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>processingInformation__c</fullName>
        <label>Processing Information</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>quoteCreatedDate__c</fullName>
        <formula>quote__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>quoteIsVariableOptions__c</fullName>
        <formula>quote__r.Multiple_Years_Commitment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote is Variable Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quoteType__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Legacy Contract Reports</relationshipLabel>
        <relationshipName>legacyContractReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>reviewerNotes__c</fullName>
        <label>Reviewer Notes</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>reviewerResult__c</fullName>
        <label>Reviewer Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>PASS</fullName>
                </value>
                <value>
                    <fullName>NEEDS_REVIEW</fullName>
                </value>
                <value>
                    <fullName>CORRECT</fullName>
                    <isActive>false</isActive>
                    <label>CORRECT</label>
                </value>
                <value>
                    <fullName>INCORRECT</fullName>
                    <isActive>false</isActive>
                    <label>INCORRECT</label>
                </value>
                <value>
                    <fullName>UNSURE</fullName>
                    <isActive>false</isActive>
                    <label>UNSURE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scriptResult__c</fullName>
        <formula>IF(failures__c &gt; 0, 'FAILED', 'PASS')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Script Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>successes__c</fullName>
        <label>Number of Matches</label>
        <summaryFilterItems>
            <field>LegacyDataComparison__c.result__c</field>
            <operation>equals</operation>
            <value>SUCCESS</value>
        </summaryFilterItems>
        <summaryForeignKey>LegacyDataComparison__c.legacyContractReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>validationNeededCount__c</fullName>
        <label>Mismatch Validation Needed Count</label>
        <summaryFilterItems>
            <field>LegacyDataComparison__c.result__c</field>
            <operation>equals</operation>
            <value>NEEDS VALIDATION</value>
        </summaryFilterItems>
        <summaryForeignKey>LegacyDataComparison__c.legacyContractReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Legacy Contract Report</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Contract Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>reviewerNotes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>